# onvif-to-rtsp

./: MAKE87.yml  README.md  pyproject.toml
app/: main.py
